# LangChaine-LangGraphe-RAG

./: README.md  README_sma.md  pyproject.toml  sma.ipynb
assistant_rh/: README.md  __init__.py  agent.py  app.py  inspect_vectordb.py  middleware.py  models.py  rag.py
assistant_rh/reglement-store-vdb/: chroma.sqlite3
assistant_rh_langgraph/: README.md  __init__.py  app.py  config.py  database.py  generate_reglement.py  graph.py  inspect_vectordb.py  tools.py
assistant_rh_langgraph/data/: employes.json
assistant_rh_langgraph/reglement-store-vdb/: chroma.sqlite3
